 
plugins {
    id 'java-library'
    id 'eclipse' // optional (to generate Eclipse project files) 
}

ant.importBuild 'sourceforge.web/build.xml'

// In this section you declare where to find the dependencies of your project
repositories {
    jcenter()
    mavenCentral()
}  

sourceCompatibility = JavaVersion.VERSION_13
targetCompatibility = JavaVersion.VERSION_13
dependencies {
    testImplementation(
            'junit:junit:4.12',
            'org.junit.jupiter:junit-jupiter-api:5.6.0-M1',
            'org.junit.platform:junit-platform-runner:1.6.0-M1'
    )
    testRuntimeOnly(
            'org.junit.jupiter:junit-jupiter-engine:5.6.0-M1',
            'org.junit.vintage:junit-vintage-engine:5.6.0-M1'
    )
}

test {
    useJUnitPlatform()
    testLogging {  events "passed", "skipped", "failed"  }    
     
}

 task myJavadocs(type: Javadoc) {
          source = sourceSets.main.allJava
          title='The JLinAlg API'
       }
        
subprojects { 
        task buildweb  {
           group = 'Sourceforge Web'
          description = 'Build the web content for sourceforge'
          dependsOn  ':myJavadocs', ':build'           
         }
        task copyToSourceforge  {
           group = 'Sourceforge Web'
          description = 'Build the web content and transmit to sourceforge'
          dependsOn  ':myJavadocs', ':build'
         }
         
} 